@@ -6,8 +6,10 @@ Feature: Elements
   Scenario: Elements enbaled?
     When I click an enabled button
     Then it should know it is enabled
+    And it should know that it is not disabled
     When I check a disabled button
     Then it should know it is not enabled
+    And it should know that it is disabled
 
   Scenario: Link element methods
     When I retrieve a link element
